<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background3"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/user_prof_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_circle_prof" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_name_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name_label"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_email_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email_label"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_email_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"

            android:layout_weight="3"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_phone_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000"
            android:text="@string/phoneNumber_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_phone_content"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_state_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000"
            android:text="@string/id_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_state_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_point_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#0ff"
            android:textAlignment="center"
            android:text="@string/your_points"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/save_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_label" />

        <Button
            android:id="@+id/log_out_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_action_setting" />


    </LinearLayout>
</LinearLayout>