<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/user_prof_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_circle_prof" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_name_id"
            android:layout_width="0dp"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_email_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000"
            android:text="@string/email_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_email_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_phone_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000"
            android:text="@string/phoneNumber_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_phone_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_point_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000"
            android:text="@string/points"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_point_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:id="@+id/user_away_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000"
            android:text="@string/away"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_away_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/notifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/user_minutes_away_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="AAAAAAAAAAAAAAAAAAA"
            android:textAlignment="center"
            android:textColor="#f02" />
    </LinearLayout>
</LinearLayout>