<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4caf50"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="#aed581"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo_img_id"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/carpool" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b2b2b2" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcome_title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_label"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#fff"
                android:text="@string/phoneNumber_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_phone_content_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#43a047"
                android:hint="347-333-0000"
                android:textAlignment="center"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#fff"
                android:text="@string/user_password_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_password_content_id"
                android:layout_width="0dp"
                android:background="#43a047"
                android:hint="Password"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="textPassword" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/sign_in_label" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/register_label" />
    </LinearLayout>
</LinearLayout>