<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_reg_attributes_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/reg_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:id="@+id/user_name_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#000"
                android:text="@string/name_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_name_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="3"
                android:textColor="#000"
                android:inputType="text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:id="@+id/user_email_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/email_label"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_email_content"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="#000"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:id="@+id/user_phone_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/phoneNumber_label"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_phone_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="3"
                android:textColor="#000"
                android:inputType="phone"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:id="@+id/user_state_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_state_id"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_state_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000"
                android:layout_weight="3"
                android:inputType="text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <TextView
                android:id="@+id/user_password_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#000"
                android:text="@string/user_password_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_password_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_reg_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/submit_registration_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="Submit" />
    </LinearLayout>
</LinearLayout>